--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3> The man who led the walk to freedom </h3>
     </div>
     <div id="img-div">
-        <img src="images (10).jpeg" alt="image" img-caption="Nelson Mandela"> 
+        <img src="Images/images (10).jpeg" alt="image" img-caption="Nelson Mandela"> 
     </div>
     <div id="tribute-infos">
         <h5> Mandela is also referred to by his Xhosa clan name, Madiba, and described as the "Father of the Nation" </h5>
